# GeoChat

./: .gitignore  README.md  geochat_demo.py  index.html  pyproject.toml
docker/: Dockerfile  geochat_demo.sh
docs/: Customize_Component.md  Data.md  Evaluation.md  LoRA.md  MODEL_ZOO.md
geochat/: __init__.py  conversation.py  mm_utils.py  utils.py
geochat/eval/: batch_geochat_grounding.py  batch_geochat_referring.py  batch_geochat_scene.py  batch_geochat_vqa.py  run_llava.py
geochat/model/: __init__.py  apply_delta.py  builder.py  consolidate.py  geochat_arch.py  make_delta.py
geochat/model/language_model/: geochat_llama.py  geochat_mpt.py
geochat/model/multimodal_encoder/: clip_encoder.py
geochat/model/multimodal_projector/: builder.py
geochat/serve/: cli.py  gradio_trial.py  gradio_web_server.py
geochat/train/: geochat_trainer.py  train.py  train_mem.py
playground/data/prompts/conversation/: 000_caps.txt  000_conv.txt  001_caps.txt  001_conv.txt  system_message.txt
scripts/: finetune_lora.sh
scripts/v1_5/: finetune-lora.sh
static/css/: index.css
